static/css/index.css
/* COLOR: #074659 */

/*  Mass Reset */
*{ margin: 0; padding: 0; border: 0; 
	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
	list-style-type: none;
	text-decoration: none;
}

a:hover {
	cursor: pointer;
}

html {
	height: 100%;
	width: 100%;
	background-color: black;
	color: gainsboro;
}
body {
	height: 100%;
}

#top-bar {
	width: 100%;
	height: 15px;
	background-color: azure;
	position: fixed;
}

#content {
	padding: 4em;
	max-width: 700px;
	margin: auto;
}

#content hr {
	margin: 30px 0;
	border: 1px dashed azure;
}

h1 {
	padding: 40px 0;
	font-size: 3em;
}

h2, h3 {
	font-weight: 200;
}

#content p {
	color: gainsboro;
}
#content img {
	height: 20px;
	width: 20px;
	margin-left: 10px;
}
#content a.current-project {
	color: gainsboro;
	text-decoration: underline;
	font-style: italic;
	font-size: 1.2em;
}
@media (max-width: 700px) {
	#content a.current-project {
		font-size: 0.9em;
	}
}

p {
	padding: 0.4em 0;
	font-size: 1em;
}

#handle-div p{
	color: gray;
	font-size: 1em;
}
#handle-div p:hover {
	color: gainsboro;
}

#handle-div img, #handle-div .img {
	color: white;
	margin-left: 0;
	margin-right: 10px;
}

.side-hack-container {
	margin-bottom: 30px;
}
.side-hack-container .name, .side-hack-container .name a {
	font-weight: 100;
	color: azure;
	padding: 10px 0;
	margin-top: 5px;
}
.side-hack-container a.link {
	color: azure;
	text-decoration: underline;
}
.side-hack-container .description {
	font-style: italic;
}
.side-hack-container .description a {
	color: white;
	text-decoration: underline;
}
.side-hack-container .iframe-container,
.side-hack-container video {
	display: block;
	width: 440px;
}
.iframe-container iframe {
	width: 100%;
	height: 100%;
}
.side-hack-container .iframe-container {
	background: white;
	height: 400px !important;
}

#writing-list li {
	display: block;
	margin: 10px 0;
	list-style-type: circle;

}
#writing-list li a {
	color: azure;
	display: inline-block;
	text-decoration: underline;
}



@media (max-width: 700px) {
	#content {
		padding: 1.4em;
	}
	#handle-div p{
		font-size: 0.7em;
	}

	.side-hack-container .iframe-container, .side-hack-container video {
		width: 300px;
	}
	.side-hack-container .iframe-container {
		height: 250px !important;
	}
}

